# calories

./: .appveyor.yml  LICENSE.md  Makefile  README.md  mkdocs.yml  pyproject.toml  scent.py
.github/workflows/: main.yml
calories/: __init__.py  __main__.py  algo.py  ds.py  extracode.py
calories/tests/: test_utils.py
tests/: conftest.py  final_recipe_test.py  optimal_calories_test.py  test_cli.py
